--- a/manifests/deployment.yaml
+++ b/manifests/deployment.yaml
@@ -16,5 +16,5 @@ spec:
       - name: simple-webapp
         image: hasankarademir/simple-web-app:latest
         ports:
-          - containerPort: 80
-        imagePullPolicy: IfNotPresent
+          - containerPort: 8000
+        imagePullPolicy: always
