--- a/manifests/service.yaml
+++ b/manifests/service.yaml
@@ -1,16 +1,14 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: nginx
+  name: simple-webapp-service
   labels:
     app: flask
 spec:
-  type: NodePort
+  type: LoadBalancer
   ports:
-  - port: 80
+  - port: 7999
     targetPort: 8000
     protocol: TCP
-    name: http
-    nodePort: 30007
   selector:
     app: flask
