Kubernetes manifest files added

--- a/manifests/service.yaml
+++ b/manifests/service.yaml
@@ -6,6 +6,7 @@ metadata:
     app: flask
 spec:
   type: LoadBalancer
+  loadBalancerIP: 35.207.142.40
   ports:
   - port: 7999
     targetPort: 8000
