--- a/manifests/ingress.yaml
+++ b/manifests/ingress.yaml
@@ -7,7 +7,7 @@ metadata:
     nginx.ingress.kubernetes.io/ssl-redirect: "true"
     nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
   name: simple-webapp-ingress
-  namespace: default
+  namespace: simple-webapp
 spec:
   tls:
   - hosts:
