--- a/manifests/deployment.yaml
+++ b/manifests/deployment.yaml
@@ -19,3 +19,7 @@ spec:
         ports:
           - containerPort: 8000
         imagePullPolicy: Always
+        resources:
+          requests:
+            memory: "256Mi"
+            cpu: "100m"
