deployment strategy added

--- a/simple-webapp-helm/templates/deployment.yaml
+++ b/simple-webapp-helm/templates/deployment.yaml
@@ -61,3 +61,8 @@ spec:
       tolerations:
         {{- toYaml . | nindent 8 }}
       {{- end }}
+  strategy:
+    type: RollingUpdate
+    rollingUpdate:
+      maxUnavailable: 25%
+      maxSurge: 25%
